2008-03-08  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildInstallFixDocdirInstall): Ensure that target directory for
	tar move exists.

	* etc/template/setup.py.tmp: New file.

2008-03-07  Jari Aalto  <jari.aalto@cante.net>

	* etc/lib/cygbuild.pl: Remove option -P|--prefix. Unneeded.

	* bin/cygbuild.sh:
	-- change variable $OPTION_PREFIX to OPTION_PREFIX_MODE
	(CygbuildCmdMkpatchMain): Remove j or z
	option check. Convert tar options to --long format.
	(CygbuildTarDirectory): Fix tar directory detection. If there
	were files that conatined spaces, the function failed. Moving
	$(NF) to column $6 fixes this. Remove j or z option check.
	Convert tar options to --long format.
	(CygbuildInstallFixDocdirInstall): Convert tar options to
	--long format.
	(CygbuildCmdDownloadCygwinPackage): Remove j or z option check.
	(CygbuildCommandMain): Remove option -P|--prefix. Unneeded.
	(CygbuildMakefileRunInstallMain): Rename. Was
	`CygbuildMakefileRunInstall'. Obey --install-prefix option.
	(CygbuildMakefilePrefixCheck): Rewrite logic how to
	detect prefix= and PREFIX=.
	(CygbuildBootVariablesGlobalCachePython): New. Add
	CYGBUILD_CACHE_PYTHON_FILES.
	(CygbuildDefineGlobalPythonVersion): New.
	(CygbuildPythonLibraryDependsCache): New.
	(CygbuildPerlLibraryDependsCache): Improve lib search regexp.
	(CygbuildCmdInstallCheckPythonLibraries): New.
	(CygbuildPythonLibraryList): New.
	(CygbuildCmdInstallCheckBinFiles): Add python library check.
	Moved Perl library code check to its own case. Removed
	`continue' from file extension check if-statement.
	(CygbuildCmdInstallCheckPerlLibraries): Sort dependencies.
	(CygbuildBootVariablesGlobalMain): From
	`cygbuild_opt_exclude_object_files' remove *.egg-info. This is
	essential Python install information file.
	(CygbuildCygcheckLibraryDepAdjustOld): Remove unused function.
	(CygbuildStripCR): new.
	(CygbuildCygcheckMain): Check is cygcheck is available.
	(CygbuildPythonCheckImport): New.